Tests/fail/spacesIndent.php
<?php
// Use tabs for indentation, not spaces.
$x = 0;
if ( $x == 0 ) {
  echo 'Foo';
}

?>